fixing calculation summary on mobile

--- a/src/components/CalculationSummary/CalculationSummary.scss
+++ b/src/components/CalculationSummary/CalculationSummary.scss
@@ -28,6 +28,11 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
+
+        @include mobile {
+            width: auto;
+            padding: 10px;
+        }
     
         &--header {
             margin-bottom: 15px;
